SERVER-6771 don't exit until SCM is done with us

Stay running while the Windows Service Control Manager makes its
various callbacks and return from any callbacks we are in before
we exit with ::_exit( EXIT_CLEAN ).  This lets the SCM close the
pipe itself before we go away, so it doesn't see us "end" it.