src/mongo/util/ntservice.cpp
@@ -30,12 +30,11 @@ namespace mongo {
 
     SERVICE_STATUS_HANDLE ServiceController::_statusHandle = NULL;
     wstring ServiceController::_serviceName;
-    ServiceCallback ServiceController::_serviceCallback = NULL;
 
     ServiceController::ServiceController() {}
 
     // defined in db/db.cpp for mongod.exe and in s/server.cpp for mongos.exe
-    extern bool initService();
+    extern void initService(void);
 
     // returns true if the service is started.
     bool serviceParamsCheck(
@@ -163,7 +162,7 @@ namespace mongo {
             ::_exit( EXIT_CLEAN );
         }
         else if ( startService ) {
-            if ( !ServiceController::startService( windowsServiceName , mongo::initService ) ) {
+            if ( !ServiceController::startService( windowsServiceName ) ) {
                 ::_exit( EXIT_NTSERVICE_ERROR );
             }
             return true;
@@ -412,12 +411,11 @@ namespace mongo {
         return serviceRemoved;
     }
 
-    bool ServiceController::startService( const wstring& serviceName, ServiceCallback startService ) {
+    bool ServiceController::startService( const wstring& serviceName ) {
         _serviceName = serviceName;
-        _serviceCallback = startService;
 
         SERVICE_TABLE_ENTRY dispTable[] = {
-            { (LPTSTR)serviceName.c_str(), (LPSERVICE_MAIN_FUNCTION)ServiceController::initService },
+            { (LPTSTR)serviceName.c_str(), ServiceController::initService },
             { NULL, NULL }
         };
 
@@ -462,17 +460,14 @@ namespace mongo {
             return;
 
         reportStatus( SERVICE_START_PENDING, 1000 );
-
-        _serviceCallback();
-        reportStatus( SERVICE_STOPPED );
-        ::_exit( EXIT_CLEAN );
+        mongo::initService();
     }
 
     static void serviceShutdown( const char* controlCodeName ) {
         Client::initThread( "serviceShutdown" );
         log() << "got " << controlCodeName << " request from Windows Service Control Manager, " <<
             ( inShutdown() ? "already in shutdown" : "will terminate after current cmd ends" ) << endl;
-        ServiceController::reportStatus( SERVICE_STOP_PENDING );
+        ServiceController::reportStatus( SERVICE_STOP_PENDING, 5000 );
         if ( ! inShutdown() ) {
             // TODO: SERVER-5703, separate the "cleanup for shutdown" functionality from
             // the "terminate process" functionality in exitCleanly.
