src/mongo/util/ntservice.h
@@ -55,7 +55,7 @@ namespace mongo {
                 char* argv[]
         );
         static bool removeService( const std::wstring& serviceName );
-        static bool startService( const std::wstring& serviceName, ServiceCallback startService );
+        static bool startService( const std::wstring& serviceName );
         static bool reportStatus( DWORD reportState, DWORD waitHint = 0 );
 
         static void WINAPI initService( DWORD argc, LPTSTR *argv );
@@ -64,7 +64,6 @@ namespace mongo {
     protected:
         static std::wstring _serviceName;
         static SERVICE_STATUS_HANDLE _statusHandle;
-        static ServiceCallback _serviceCallback;
     };
 
 } // namespace mongo
